--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
