--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^8.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.6.3",
+    "mongoose-paginate-v2": "^1.8.5",
     "multer": "^1.4.5-lts.1"
   }
 }
